The converter now automatically find file system and format and ask for confirmation ; the sync script support the choice between the file formats (jpg or png)

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /Kaguya-sama wa Kokurasetai Tensai-tachi no Renai Zunousen
 /Komi-san wa Komyushou Desu
 /search.json
+/Kubo-san wa Boku (Mobu) wo Yurusanai
